--- a/main.html
+++ b/main.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+	<input type="text" id="evaluatedText">
+	<h3 id="letterCount">
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
