--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<input type="text" id="evaluatedText">
-	<h3 id="letterCount">
+	<input type="text" id="evaluatedText" value="">
+	<h3 id="letterCount"></h3>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
