--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<input type="text" id="evaluatedText" value="">
-	<h3 id="letterCount"></h3>
+	<h3 id="letterCount">0</h3>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
